--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "immutable": "^4.0.0-rc.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.4",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "redux-immutable": "^4.0.0",
     "styled-components": "^5.2.0"
   },
   "scripts": {
